<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MapFragment">

    <org.osmdroid.views.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/copyright_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_copyright"
        android:textColor="#000000"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="2dp"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/no_internet_layout" />

    <ImageButton
        android:id="@+id/settings_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_settings_black"
        android:scaleType="fitCenter"
        android:background="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp" />

    <LinearLayout
        android:id="@+id/search_address_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/lower_rounded_layout"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:paddingRight="10dp"
        android:paddingBottom="15dp"
        android:layout_gravity="top"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        android:visibility="gone" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sa_input_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="50dp"
                android:hint="@string/address_input_hint"
                android:singleLine="true"
                android:imeOptions="actionSearch"
                android:background="@null"
                android:layout_marginEnd="34dp" />

            <ImageButton
                android:id="@+id/address_img_btn"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:background="@null"
                android:src="@drawable/ic_clear_black"
                android:layout_gravity="end|center_vertical" />

            <ImageButton
                android:id="@+id/address_updown_img_btn"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:background="@null"
                android:src="@drawable/ic_kb_arrow_up_black"
                android:layout_gravity="end|center_vertical"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/address_progressbar"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:visibility="gone" />
        </FrameLayout>

        <ListView
            android:id="@+id/address_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:scrollbars="none"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/infowindow_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/upper_rounded_layout"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:paddingRight="10dp"
        android:paddingBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="#000"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/snippet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#000"
            android:textSize="14sp"
            android:textAlignment="center"/>

        <ListView
            android:id="@+id/listview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:listSelector="@android:color/transparent"
            android:scrollbars="none" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_stop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/lower_rounded_layout"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:paddingRight="10dp"
        android:paddingBottom="15dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/stop_input_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="250dp"
                android:minHeight="50dp"
                android:hint="@string/stop_input_hint"
                android:inputType="number"
                android:singleLine="true"
                android:imeOptions="actionSearch"
                android:background="@null"
                android:layout_marginEnd="34dp" />

            <ImageButton
                android:id="@+id/stop_img_btn"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:background="@null"
                android:src="@drawable/ic_clear_black"
                android:layout_gravity="end|center_vertical"/>

            <ProgressBar
                android:id="@+id/stop_progressbar"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:visibility="gone" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_internet_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_layout"
        android:orientation="vertical"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/search_route_layout" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/no_internet_message_box"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:layout_gravity="center" />

    </LinearLayout>

        <LinearLayout
            android:id="@+id/search_route_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/lower_rounded_layout"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:paddingRight="10dp"
            android:paddingBottom="15dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintBottom_toTopOf="@id/bottomNavigationView">

            <Spinner
                android:id="@+id/vehicle_type_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_gravity="center_vertical"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="250dp"
                    android:minHeight="50dp"
                    android:hint="@string/route_input_hint"
                    android:inputType="number"
                    android:singleLine="true"
                    android:imeOptions="actionSearch"
                    android:background="@null"
                    android:layout_marginEnd="34dp" />

                <ImageButton
                    android:id="@+id/route_img_btn"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:background="@null"
                    android:src="@drawable/ic_clear_black"
                    android:layout_gravity="end|center_vertical"/>

                <ProgressBar
                    android:id="@+id/route_progressbar"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:visibility="gone" />
            </FrameLayout>

        </LinearLayout>

    <ImageButton
        android:id="@+id/location_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_get_location"
        android:scaleType="fitCenter"
        android:background="@null"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@id/no_internet_layout"
        app:layout_constraintLeft_toLeftOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/additional_controls_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/no_internet_layout"
        app:layout_constraintRight_toRightOf="parent" >

        <ImageButton
            android:id="@+id/expand_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_expand_more_black"
            android:scaleType="fitCenter"
            android:background="@null"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toTopOf="@id/toggleable_controls_layout"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toggleable_controls_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="gone" >

        <ImageButton
            android:id="@+id/routing_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_pathing_black"
            android:scaleType="fitCenter"
            android:background="@null"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="330dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageButton
            android:id="@+id/offline_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_offline_disabled_black"
            android:scaleType="fitCenter"
            android:background="@null"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="270dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageButton
            android:id="@+id/one_hand_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_minimize_black"
            android:scaleType="fitCenter"
            android:background="@null"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="210dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageButton
            android:id="@+id/zoom_in_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_zoom_in"
            android:scaleType="fitCenter"
            android:background="@null"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageButton
            android:id="@+id/zoom_out_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_zoom_out"
            android:scaleType="fitCenter"
            android:background="@null"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="85dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageButton
            android:id="@+id/reload_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:background="@null"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@android:color/white"
        app:itemBackground="@android:color/transparent"
        android:theme="@style/BottomNavigationViewTheme"
        app:menu ="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>